--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,20 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td><% if book.favorited_by?(current_user) %>
+          <p>
+            <%= link_to book_favorites_path(book.id), method: :delete do %>
+             <span class="text-danger">♥<%= book.favorites.count %></span>
+            <% end %>
+          </p>
+          <% else %>
+          <p>
+            <%= link_to book_favorites_path(book.id), method: :post do %>
+             ♥<%= book.favorites.count %>
+            <% end %>
+          </p>
+        <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
