--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -30,6 +30,7 @@
           </p>
         <% end %>
         </td>
+        <td><%= "コメント数:#{book.book_comments.count}" %></td>
       </tr>
     <% end %>
   </tbody>
