--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,10 +18,46 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
           <td><% if @book.user == current_user %>
-            <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %>
-            <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger" %></td>
             <% end %>
           </td>
+
+          <td><% if @book.favorited_by?(current_user) %>
+            <p>
+              <%= link_to book_favorites_path(@book.id), method: :delete do %>
+               <span class="text-danger">♥<%= @book.favorites.count %></span>
+              <% end %>
+            </p>
+            <% else %>
+            <p>
+              <%= link_to book_favorites_path(@book.id), method: :post do %>
+               ♥<%= @book.favorites.count %>
+              <% end %>
+            </p>
+            <% end %>
+          </td>
+
+          <td><%= "コメント数:#{@book.book_comments.count}" %></td>
+        </tr>
+
+        <tr><% @book.book_comments.each do |book_comment| %></tr>
+              <td><%= image_tag book_comment.user.get_profile_image, size:"100x100" %><br>
+                <%= link_to book_comment.user.name, books_path %></td>
+              <td><%= book_comment.comment %></td>
+
+              <td>
+                <% if book_comment.user == current_user %>
+                  <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
+                <% end %>
+              </td>
+
+        <tr><% end %></tr>
+
+        <tr><%= form_with model: [@book, @book_comment] do |f| %>
+            <td><%= f.text_area :comment, row: '5' %></td>
+            <td><%= f.submit "送信" %></td>
+          <% end %>
         </tr>
       </table>
     </div>
