--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,10 +8,27 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <td>follows</td>
+    <td><%= link_to user.followers.count, followers_user_path(user) %></td>
+  </tr>
+  <tr>
+    <td>folloers</td>
+    <td><%= link_to user.followeds.count, followeds_user_path(user) %></td>
+  </tr>
+
 </table>
 
 <div class='row'>
-  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
+  <% if user == current_user %>
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+      <i class="fas fa-user-cog"></i>
+    <% end %>
+  <% else %>
+    <% if user.is_followed_by?(current_user) %>
+      <%= link_to "フォロー外す",  user_relationships_path(user), method: :delete, class:"btn btn-info" %>
+    <% else %>
+      <%= link_to "フォローする",  user_relationships_path(user), method: :post, class:"btn btn-success" %>
+    <% end %>
   <% end %>
 </div>
