--- a/app/views/users/followeds.html.erb
+++ b/app/views/users/followeds.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <h3>Follower Users</h3>
-      <table class='table'>
+      <table class='table table-hover'>
         <thead>
           <tr>
             <th>image</th>
