--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,22 +22,9 @@
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger" %></td>
             <% end %>
           </td>
-
-          <td><% if @book.favorited_by?(current_user) %>
-            <p>
-              <%= link_to book_favorites_path(@book.id), method: :delete do %>
-               <span class="text-danger">♥<%= @book.favorites.count %></span>
-              <% end %>
-            </p>
-            <% else %>
-            <p>
-              <%= link_to book_favorites_path(@book.id), method: :post do %>
-               ♥<%= @book.favorites.count %>
-              <% end %>
-            </p>
-            <% end %>
+          <td id="favorite_btn_<%= @book.id %>">
+            <%= render "favorites/btn", book: @book %>
           </td>
-
           <td><%= "コメント数:#{@book.book_comments.count}" %></td>
         </tr>
       </table>
