--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,28 +25,15 @@
           <td id="favorite_btn_<%= @book.id %>">
             <%= render "favorites/btn", book: @book %>
           </td>
-          <td><%= "コメント数:#{@book.book_comments.count}" %></td>
+          <td id="comment_counter">
+            <%= render "book_comments/counter", book: @book %>
+          </td>
         </tr>
       </table>
-      <table>
-        <tbody>
-          <tr><% @book.book_comments.each do |book_comment| %></tr>
-            <td><%= image_tag book_comment.user.get_profile_image, size:"100x100" %><br>
-                <%= link_to book_comment.user.name, books_path %></td>
-            <td><%= book_comment.comment %></td>
-            <td>
-              <% if book_comment.user == current_user %>
-                <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
-              <% end %>
-            </td>
-        <tr><% end %></tr>
-        </tbody>
-      </table>
-      <%= form_with model: [@book, @book_comment] do |f| %>
-          <%= f.text_area :comment, row: '5', class: "w-100" %>
-          <%= f.submit "送信" %>
-      <% end %>
-
+      <div id="comment_index">
+        <%= render "book_comments/index", book: @book %>
+      </div>
+      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
