--- a/app/views/users/followeds.html.erb
+++ b/app/views/users/followeds.html.erb
@@ -11,6 +11,7 @@
           </tr>
         </thead>
         <tbody>
+        <% if @users.exists? %>
           <% @users.each do |user| %>
             <tr>
               <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
@@ -20,6 +21,9 @@
               <td><%= link_to 'Show', user %></td>
             </tr>
           <% end %>
+        <% else %>
+          <td>ユーザーはいません</td>
+        <% end %>
         </tbody>
       </table>
     </div>
