--- a/app/views/book_comments/_form.html.erb
+++ b/app/views/book_comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_with model: [book, book_comment], local: false do |f| %>
-  <%= f.text_area :comment, row: '5', class: "w-100" %>
+  <%= f.text_area :comment, rows:'5', placeholder: "コメントをここに", class: "w-100" %>
   <%= f.submit "送信" %>
 <% end %>
